--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,124 @@ a {
 * {
   box-sizing: border-box;
 }
+
+body {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 7s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 50% 0%;
+  }
+}
+
+.item {
+  width: 200px;
+  height: 200px;
+  margin: 50px auto;
+  padding-top: 75px;
+  background: tomato;
+  text-align: center;
+  color: #fff;
+  font-size: 3em;
+}
+
+.expand {
+  height: 500px;
+  width: 100%;
+}
+
+#cover {
+  /* background: url("../public/IMG_7420_2.jpg") no-repeat; */
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 60% 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+}
+
+#cover-text {
+  color: #000;
+  font-size: 2.5em;
+  width: 100%;
+  margin-left: 0.25em;
+}
+
+.fade {
+  animation: fadeIn linear 7s;
+  -webkit-animation: fadeIn linear 7s;
+  -moz-animation: fadeIn linear 7s;
+  -o-animation: fadeIn linear 7s;
+  -ms-animation: fadeIn linear 7s;
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-moz-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-webkit-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-o-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+}
+
+#cover-text div {
+  width: 100%;
+}
+
+.fixed {
+  background: url("../public/IMG_7420_2.jpg") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.fixed1 {
+  background: url("../public/Nite.jpg") no-repeat center/contain;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.fixed p,
+.fixed1 p {
+  height: 200px;
+  margin: auto;
+}
