--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,17 +62,21 @@ a {
 }
 
 #intro-content {
-  text-align: center;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  text-align: center;
   height: 100vh;
 }
 
-
+#intro-content .content h3 {
+  margin-bottom: 1em;
+}
 
 #intro-content .content p {
   padding: 0 30px;
+  line-height: 1.5em;
+  text-align: left;
 }
 
 .item {
