--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,7 +32,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-attachment: fixed; // safari disable
+  // background-attachment: fixed;
 
   #cover-text {
     width: 100%;
@@ -53,7 +53,7 @@ a {
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: 38em;
-  background-attachment: fixed;
+  // background-attachment: fixed;
   
   #intro-content {
     position: absolute;
@@ -69,7 +69,7 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 70% 0;
-  background-attachment: fixed;
+  // background-attachment: fixed;
 
   #about-content {
     height: 100%;
@@ -84,7 +84,7 @@ a {
   background: url("../public/matrix.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  // background-attachment: fixed;
 }
 
 .fixed .content {
@@ -103,5 +103,5 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
+  // background-attachment: fixed;
 }
