--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-weight: 200;
 }
 
 a {
@@ -65,6 +66,24 @@ a {
   #intro-content {
     min-height: 50vh;
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 2em;
+    .title {
+      margin-left: 2em;
+      h2 {
+        font-size: 3em;
+      }
+      h3 {
+        margin-top: -1.5em;
+        font-size: 1.25em;
+      }
+    }
+    .content {
+      margin: 0.75em 2em;
+      line-height: 1.5em;
+    }
   }
 }
 
