--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  max-width: 425px;
+  max-width: 426px;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
@@ -194,77 +194,98 @@ a {
 }
 
 #contact {
-  .bg-blur {
-    background: url("../public/image/mountain.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-position: 70% 0;
-    filter: blur(4px);
-    -webkit-filter: blur(4px);
-    width: 100%;
-    height: 100vh;
-    transform: scale(1.03); // avoid blur border
-  }
-
   // background-attachment: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(255, 253, 251, 0.7);
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  background-color: #fff;
 
   .title {
     position: absolute;
-    top: 20%;
-    width: 60%;
-    text-align: left;
+    top: 47.5%;
+    width: 100%;
+    text-align: center;
     line-height: 2em;
+    z-index: 2;
+    color: #000;
   }
 
   .content {
-    // background: rgba(255, 253, 251, 0.7);
-    position: absolute;
-    top: 40%;
-    width: 80%;
-    // height: 60vw;
-    color: #000;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    text-align: center;
-    z-index: 2;
+    background: rgba(255, 253, 251, 0.7);
+    // position: absolute;
+    // top: 40%;
+    // width: 80%;
+    // // height: 60vw;
+    // color: #000;
+    // display: flex;
+    // justify-content: space-around;
+    // align-items: center;
+    // flex-wrap: wrap;
+    // text-align: center;
+    // z-index: 2;
 
-    .icon {
-      border-radius: 22.5%;
-      min-width: 3.25em;
-      min-height: 3.25em;
-      margin: 3em 2em;
+    // .icon {
+    //   border-radius: 22.5%;
+    //   min-width: 3.25em;
+    //   min-height: 3.25em;
+    //   margin: 3em 2em;
+    // }
+
+    a {
+      display: inline-block;
+      width: 100%;
+      height: 100%;
     }
 
     #linkedIn {
-      background: url("../public/icon/linkedin-icon.svg");
-      background-size: cover;
+      background: url("../public/icon/linkedin-logo.svg");
+      background-size: 80%;
+      background-repeat: no-repeat;
+      background-position: center;
+      a {
+        background-color: #0076b511;
+      }
     }
 
     #github {
-      background: url("../public/icon/github-icon.svg");
-      background-size: cover;
+      background: url("../public/icon/github-logo.svg");
+      background-size: 80%;
+      background-repeat: no-repeat;
       background-position: center;
-      background-color: #fff;
+      a {
+        background-color: #ad5c5d36;
+        // background-color: #f4cbb246;
+      }
     }
 
     #medium {
-      background: url("../public/icon/medium-icon.svg");
-      background-size: cover;
-      background-color: #fff;
+      background: url("../public/icon/medium-logo.svg");
+      background-size: 80%;
+      background-repeat: no-repeat;
+      background-position: center;
+      object-fit: contain;
+      a {
+        background-color: #caccce2c;
+      }
     }
 
     #instagram {
-      background: url("../public/icon/ig-icon.svg");
-      background-size: cover;
+      background: url("../public/icon/instagram-logo.svg");
+      background-size: 80%;
+      background-repeat: no-repeat;
+      background-position: center;
+      a {
+        background-color: #dd2a7b33;
+      }
     }
+  }
+
+  .content {
+    display: grid;
+    width: 100%;
+    height: 100vh;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
