--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -271,7 +271,7 @@ a {
     }
 
     #instagram {
-      background: url("../public/icon/instagram-logo.svg");
+      background: url("../public/icon/ig-logo.svg");
       background-size: 80%;
       background-repeat: no-repeat;
       background-position: center;
