convert image format to webp

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -94,7 +94,7 @@ a {
   #intro-image {
     width: 100%;
     min-height: 100vh;
-    background: url("../public/image//me.jpg");
+    background: url("../public/image//me.webp");
     background-repeat: no-repeat;
     background-position: 0 45%;
     background-size: cover;
@@ -133,7 +133,7 @@ a {
 //   #intro-image {
 //     width: 100vw;
 //     min-height: 100vh;
-//     background: url("../public/image//me.jpg");
+//     background: url("../public/image//me.webp");
 //     background-repeat: no-repeat;
 //     background-position: 0 45%;
 //     background-size: cover;
@@ -204,7 +204,7 @@ a {
 }
 
 #developer {
-  background: url("../public/image/matrix.jpg");
+  background: url("../public/image/matrix.webp");
   background-repeat: no-repeat;
   background-size: cover;
   // background-attachment: fixed;
@@ -219,7 +219,7 @@ a {
 }
 
 #petrolHead {
-  background: url("../public/image/roadster.jpg");
+  background: url("../public/image/roadster.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -231,7 +231,7 @@ a {
 }
 
 #investment {
-  background: url("../public/image/wallstreet.jpg");
+  background: url("../public/image/wallstreet.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -244,7 +244,7 @@ a {
 }
 
 #ta {
-  background: url("../public/image/ac.jpg");
+  background: url("../public/image/ac.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -257,7 +257,7 @@ a {
 }
 
 #sharing {
-  background: url("../public/image/sharing.jpg");
+  background: url("../public/image/sharing.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -270,7 +270,7 @@ a {
 }
 
 #movie {
-  background: url("../public/image/inception.jpg");
+  background: url("../public/image/inception.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -283,7 +283,7 @@ a {
 }
 
 #sea {
-  background: url("../public/image/sea.jpg");
+  background: url("../public/image/sea.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
