update meta tag image

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -219,7 +219,7 @@ a {
 }
 
 #petrolHead {
-  background: url("../public/image/roadster.webp");
+  background: url("../public/image/roadster.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
