update image and content

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -94,7 +94,7 @@ a {
   #intro-image {
     width: 100%;
     min-height: 100vh;
-    background: url("../public/image//me.webp");
+    background: url("../public/image/me.webp");
     background-repeat: no-repeat;
     background-position: 0 45%;
     background-size: cover;
