--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -43,17 +43,17 @@ a {
 #intro,
 #intro-content {
   width: 100%;
-  min-height: 100vh;
+  min-height: 800px;
 }
 
 .wrapper {
   position: relative;
-  min-height: 100vh;
+  min-height: 800px;
 }
 
 .downtime-wrapper {
   position: relative;
-  min-height: 60vh;
+  min-height: 800px;
 }
 
 #cover {
@@ -93,7 +93,7 @@ a {
 
   #intro-image {
     width: 100%;
-    min-height: 100vh;
+    min-height: 800px;
     background: url("../public/image/me.webp");
     background-repeat: no-repeat;
     background-position: 0 45%;
@@ -132,7 +132,7 @@ a {
 
 //   #intro-image {
 //     width: 100vw;
-//     min-height: 100vh;
+//     min-height: 800px;
 //     background: url("../public/image//me.webp");
 //     background-repeat: no-repeat;
 //     background-position: 0 45%;
@@ -366,7 +366,7 @@ a {
   .content {
     display: grid;
     width: 100%;
-    height: 100vh;
+    height: 800px;
     grid-template-columns: repeat(2, 1fr);
   }
 }
