--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -102,7 +102,7 @@ a {
   }
 
   #intro-content {
-    min-height: 50vh;
+    min-height: 400px;
     text-align: left;
     display: flex;
     flex-direction: column;
