--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -53,7 +53,7 @@ a {
 
 .downtime-wrapper {
   position: relative;
-  min-height: 800px;
+  min-height: 600px;
 }
 
 #cover {
@@ -108,13 +108,13 @@ a {
     flex-direction: column;
     justify-content: center;
     margin-bottom: 2em;
-    .title {
+    .title-wrapper {
       margin-left: 2em;
-      h2 {
+      .title {
+        margin-top: 1em;
         font-size: 3em;
       }
-      h3 {
-        margin-top: -1.5em;
+      .subtitle {
         font-size: 1.25em;
       }
     }
@@ -182,10 +182,13 @@ a {
 // }
 
 .downtime-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   .downtime-title {
-    position: absolute;
-    top: 0%;
-    left: 0%;
+    // position: absolute;
+    // top: 0%;
+    // left: 0%;
     background: rgba(200, 213, 240, 0.5);
     width: 100%;
     height: 1.25em;
@@ -212,10 +215,6 @@ a {
   .content {
     color: #fff;
   }
-  .content {
-    position: absolute;
-    bottom: 10%;
-  }
 }
 
 #petrolHead {
@@ -224,10 +223,6 @@ a {
   background-size: cover;
   background-position: center;
   // background-attachment: fixed;
-  .content {
-    position: absolute;
-    bottom: 10%;
-  }
 }
 
 #investment {
@@ -236,11 +231,6 @@ a {
   background-size: cover;
   background-position: center;
   // background-attachment: fixed;
-
-  .content {
-    position: absolute;
-    bottom: 5%;
-  }
 }
 
 #ta {
@@ -249,11 +239,6 @@ a {
   background-size: cover;
   background-position: center;
   // background-attachment: fixed;
-
-  .content {
-    position: absolute;
-    bottom: 5%;
-  }
 }
 
 #sharing {
@@ -262,11 +247,6 @@ a {
   background-size: cover;
   background-position: center;
   // background-attachment: fixed;
-
-  .content {
-    position: absolute;
-    bottom: 5%;
-  }
 }
 
 #movie {
@@ -275,11 +255,6 @@ a {
   background-size: cover;
   background-position: center;
   // background-attachment: fixed;
-
-  .content {
-    position: absolute;
-    bottom: 5%;
-  }
 }
 
 #sea {
@@ -288,19 +263,9 @@ a {
   background-size: cover;
   background-position: center;
   // background-attachment: fixed;
-
-  .content {
-    position: absolute;
-    bottom: 5%;
-  }
 }
 
 #contact {
-  // background-attachment: fixed;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // align-items: center;
   background-color: #fff;
 
   .title {
