--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,8 +7,8 @@ body {
   margin: 0;
   // width: 100%;
   // height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: 200;
   scrollbar-width: none;
 }
@@ -108,7 +108,7 @@ a {
   #intro-image {
     width: 100%;
     min-height: 800px;
-    background: url("../public/image/me.webp");
+    background: url('../public/image/me.webp');
     background-repeat: no-repeat;
     background-position: 0 45%;
     background-size: cover;
@@ -221,7 +221,7 @@ a {
 }
 
 #developer {
-  background: url("../public/image/matrix.webp");
+  background: url('../public/image/matrix.webp');
   background-repeat: no-repeat;
   background-size: cover;
   // background-attachment: fixed;
@@ -232,7 +232,7 @@ a {
 }
 
 #petrolHead {
-  background: url("../public/image/roadster.jpg");
+  background: url('../public/image/roadster.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -240,7 +240,7 @@ a {
 }
 
 #investment {
-  background: url("../public/image/wallstreet.webp");
+  background: url('../public/image/wallstreet.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -248,7 +248,7 @@ a {
 }
 
 #ta {
-  background: url("../public/image/ac.webp");
+  background: url('../public/image/ac.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -256,7 +256,7 @@ a {
 }
 
 #sharing {
-  background: url("../public/image/sharing.webp");
+  background: url('../public/image/sharing.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -264,7 +264,7 @@ a {
 }
 
 #movie {
-  background: url("../public/image/inception.webp");
+  background: url('../public/image/inception.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -272,7 +272,7 @@ a {
 }
 
 #sea {
-  background: url("../public/image/sea.webp");
+  background: url('../public/image/sea.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -300,7 +300,7 @@ a {
     }
 
     #linkedIn {
-      background: url("../public/icon/linkedin-logo.svg");
+      background: url('../public/icon/linkedin-logo.svg');
       background-size: 80%;
       background-repeat: no-repeat;
       background-position: center;
@@ -310,7 +310,7 @@ a {
     }
 
     #github {
-      background: url("../public/icon/github-logo.svg");
+      background: url('../public/icon/github-logo.svg');
       background-size: 80%;
       background-repeat: no-repeat;
       background-position: center;
@@ -321,7 +321,7 @@ a {
     }
 
     #medium {
-      background: url("../public/icon/medium-logo.svg");
+      background: url('../public/icon/medium-logo.svg');
       background-size: 80%;
       background-repeat: no-repeat;
       background-position: center;
@@ -332,7 +332,7 @@ a {
     }
 
     #instagram {
-      background: url("../public/icon/ig-logo.svg");
+      background: url('../public/icon/ig-logo.svg');
       background-size: 80%;
       background-repeat: no-repeat;
       background-position: center;
