--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,4 @@
-$text-glow: 0 0 80px rgb(192 219 255 / 75%), 0 0 32px rgb(65 120 255 / 24%);
-$web3-gradient: linear-gradient(to right, #30cfd0, #c43ad6);
+@import './variables.scss';
 
 html,
 body {
@@ -8,18 +7,7 @@ body {
   // width: 100%;
   // height: 100%;
   background-color: #07050f;
-  background-image: radial-gradient(
-      circle closest-corner at var(--first-gradient-coords),
-      rgba(40, 72, 122, 0.85),
-      transparent
-    ),
-    radial-gradient(
-      circle closest-corner at var(--second-gradient-coords),
-      rgba(138, 41, 129, 0.7),
-      transparent
-    );
-  --first-gradient-coords: -5% 13%;
-  --second-gradient-coords: 140% 35%;
+  // background-color: rgb(35 39 47/1);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: 200;
@@ -53,6 +41,20 @@ a {
   width: 100vw;
   color: #fff;
   position: relative;
+  padding: 0 16px;
+}
+
+.card--bg {
+  width: 160px;
+  height: 160px;
+  position: absolute;
+  background-size: 250%;
+  background-position: center center;
+  filter: blur(60px);
+  z-index: -1;
+  display: block;
+  opacity: 0.6;
+  top: 64px;
 }
 
 #cover,
@@ -82,6 +84,18 @@ a {
   justify-content: center;
   align-items: center;
   position: relative;
+  background-image: radial-gradient(
+      circle closest-corner at var(--first-gradient-coords),
+      rgba(40, 72, 122, 0.85),
+      transparent
+    ),
+    radial-gradient(
+      circle closest-corner at var(--second-gradient-coords),
+      rgba(138, 41, 129, 0.7),
+      transparent
+    );
+  --first-gradient-coords: -5% 13%;
+  --second-gradient-coords: 140% 35%;
   // background-attachment: fixed;
 
   #cover-text {
@@ -109,6 +123,17 @@ a {
   30% {
     transform: translateY(-600%);
   }
+}
+
+#card-wrapper {
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 160px);
+  gap: 16px;
+  flex-wrap: wrap;
+  flex-grow: 0;
+  justify-content: center;
 }
 
 #intro {
