--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,2 +1,12 @@
 $text-glow: 0 0 80px rgb(192 219 255 / 75%), 0 0 32px rgb(65 120 255 / 24%);
 $web3-gradient: linear-gradient(to right, #30cfd0, #c43ad6);
+$bg: radial-gradient(
+    circle closest-corner at var(--first-gradient-coords),
+    rgba(40, 72, 122, 0.85),
+    transparent
+  ),
+  radial-gradient(
+    circle closest-corner at var(--second-gradient-coords),
+    rgba(138, 41, 129, 0.7),
+    transparent
+  );
