--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -1,5 +1,58 @@
 .modal--root {
+  width: 100%;
+  height: 100%;
   position: absolute;
-  left: 50%;
-  top: 50%;
+  z-index: 2;
+  border: 1px solid #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &[data-open='true'] {
+    visibility: visible;
+    // transform-origin: (0, 0);
+    // transform: scale(2.1, 2.1);
+    transition-duration: 200ms;
+    background-color: #111;
+  }
+
+  &[data-open='false'] {
+    visibility: hidden;
+  }
+
+  .close-button {
+    position: absolute;
+    right: 0;
+    padding: 30px;
+    // z-index: 2;
+    cursor: pointer;
+
+    &:active {
+      background-color: none;
+    }
+  }
+
+  .content {
+    z-index: 2;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url('/icon/react-logo.png') no-repeat center top;
+    background-size: cover;
+    overflow: hidden;
+    -webkit-filter: blur(15px);
+    -moz-filter: blur(15px);
+    -o-filter: blur(15px);
+    -ms-filter: blur(15px);
+    filter: blur(15px);
+    // -webkit-transform: scale(1.2, 1.2);
+    // -moz-transform: scale(1.2, 1.2);
+    // -o-transform: scale(1.2, 1.2);
+    // -ms-transform: scale(1.2, 1.2);
+    // transform: scale(1.2, 1.2);
+  }
 }
