--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -3,7 +3,7 @@
   height: 100%;
   position: absolute;
   z-index: 2;
-  border: 1px solid #fff;
+  // border: 1px solid #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,17 +23,18 @@
   .close-button {
     position: absolute;
     right: 0;
-    padding: 30px;
-    // z-index: 2;
+    padding: 50px;
+    z-index: 3;
     cursor: pointer;
-
-    &:active {
-      background-color: none;
-    }
   }
 
   .content {
     z-index: 2;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 100px;
+    line-height: 28px;
   }
 
   &::before {
@@ -41,14 +42,14 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url('/icon/react-logo.png') no-repeat center top;
+    background: url('/icon/react-logo.png') no-repeat;
     background-size: cover;
     overflow: hidden;
-    -webkit-filter: blur(15px);
-    -moz-filter: blur(15px);
-    -o-filter: blur(15px);
-    -ms-filter: blur(15px);
-    filter: blur(15px);
+    -webkit-filter: blur(25px);
+    -moz-filter: blur(25px);
+    -o-filter: blur(25px);
+    -ms-filter: blur(25px);
+    filter: blur(25px);
     // -webkit-transform: scale(1.2, 1.2);
     // -moz-transform: scale(1.2, 1.2);
     // -o-transform: scale(1.2, 1.2);
